--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap');
+
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-left: 50px;
     padding-right: 50px;
+    padding-bottom: 10px;
+    position: sticky;
+    top: 0px;
+    background-color: #FAF0E4;
+    border-bottom: 1px solid black;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #img-header{
