--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,6 +14,11 @@ header{
     font-family: 'Montserrat', sans-serif;
 }
 
+a{
+    color: black;
+    text-decoration: none;
+}
+
 #img-header{
     width: 80px;
 }
