--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,18 +4,23 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-bottom: 10px;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     position: sticky;
     top: 0px;
-    background-color: #FAF0E4;
+    background-color: #143966;
     border-bottom: 1px solid black;
     font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+
+*{
+   margin: 0px;
 }
 
 a{
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
@@ -32,7 +37,7 @@ a{
 }
 
 .cart-counter{
-    background-color: red;
+    background-color: black;
     width: 20px;
     height: 20px;
     display: flex;
@@ -44,7 +49,7 @@ a{
     bottom: 20px;
     font-size: 12px;
     font-weight: 900;
-    border: 2px solid black;
+    border: 2px solid white;
 }
 
 ul{
