--- a/src/components/pages/Login/login.css
+++ b/src/components/pages/Login/login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap');
 
 body{
-    background-color: #FAF0E4;
+    background-color: #ebebeb;
 }
 
 .login{
