--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,43 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap');
-
-.prod-image{
-    width: 250px;
-    height: 250px;
-    border-bottom: 1px solid rgb(227, 227, 227);
-}
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Linear+B&display=swap');
 
 .card-container{
     width: 250px;
     border-radius: 0px;
-    background-color: #143966;
-    border: 3px solid #143966;
+    background-color: white;
     color: white;
+    border-radius: 10px;
+}
+
+.prod-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    padding-top: 40px;
+}
+
+.prod-image>img{
+    width: 150px;
+    height: 150px;
+}
+
+.prod-price{
+    color: black;
+    font-size: 17px;
+    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    font-family: 'Noto Sans Linear B', sans-serif;
+}
+
+.pepo{
+    font-family: 'Noto Sans Linear B', sans-serif;
 }
 
 .button{
     display: flex;
     justify-content: center;
-    padding-bottom: 20px;
-}
-
-.product-title{
-    height: 75px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-    display: flex;
-    justify-content: center;
-}
-
-.product-price{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 20px;
+    padding: 20px;
 }
 
 .product-button{
-    padding: 10px;
+    padding: 13px;
     border: none;
     cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans Linear B', sans-serif;
+    background-color: #143966;
+    color: white;
+    border-radius: 10px;
 }
