--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -58,3 +58,18 @@
     margin: 10px;
     border: none;
 }
+
+.prod-title{
+    color: black;
+    text-align: center;
+}
+
+.prod-title-p{
+    font-family: 'Noto Sans Linear B', sans-serif;
+    height: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-left: 15px;
+    margin-right: 15px;
+}
