--- a/src/components/pages/Cart/cart.css
+++ b/src/components/pages/Cart/cart.css
@@ -112,7 +112,10 @@
 .end-buy-products,.end-buy-total{
     display: flex;
     justify-content:space-between;
-    margin:15px;
+    margin:8px;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-family: 'Noto Sans Linear B', sans-serif;
 }
 
 .button-end-buy{
@@ -126,7 +129,7 @@
     padding: 15px;
     padding-left: 90px;
     padding-right: 90px;
-    font-family: 'Noto Sans Linear B', sans-serif;
+    
     font-size: 14px;
     background-color: #143966;
     color: white;
