--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,7 +2,6 @@
 
 .card-container{
     width: 250px;
-    border-radius: 0px;
     background-color: white;
     color: white;
     border-radius: 10px;
@@ -14,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    padding-top: 40px;
+    padding-top: 20px;
 }
 
 .prod-image>img{
@@ -72,4 +71,13 @@
     text-overflow: ellipsis;
     margin-left: 15px;
     margin-right: 15px;
+}
+
+.expand{
+    color: #143966;
+    display: flex;
+    justify-content: end;
+    padding: 10px;
+    font-size: 14px;
+    cursor: pointer;
 }
