--- a/src/components/pages/Welcome/welcome.css
+++ b/src/components/pages/Welcome/welcome.css
@@ -5,3 +5,11 @@
     justify-content: center;
     margin-top: 100px;
 }
+
+.Loading{
+    display: flex;
+    justify-content: center;
+    margin-top: 250px;
+    font-size: 50px;
+    color: #143966;
+}
