--- a/src/components/pages/Product-View/productview.css
+++ b/src/components/pages/Product-View/productview.css
@@ -58,7 +58,7 @@
     cursor: pointer;
     font-family: 'Noto Sans Linear B', sans-serif;
     font-size: 18px;
-    background-color: #143966;
+    background-color: black;
     color: white;
     border-radius: 5px;
 }
