--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,11 +1,10 @@
  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Linear+B&display=swap');
 
 .card-container{
-    width: 350px;
-    height: 500px;
+    width: 380px;
+    height: 550px;
     background-color: white;
     color: white;
-    cursor: pointer;
     box-shadow:
   2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
   6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -22,22 +21,22 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 
-.prod-image>img{
-    width: 280px;
-    height: 330px;
+.imgproducto{
+    width: 310px;
+    height: 380px;
 }
 
 .prod-price{
     color: black;
     font-size: 23px;
-    font-family: 'Noto Sans Linear B', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .p-price{
-    font-family: 'Noto Sans Linear B', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container-tpb{
@@ -53,7 +52,7 @@ margin-left: 15px;
     padding: 13px;
     border: none;
     cursor: pointer;
-    font-family: 'Noto Sans Linear B', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #143966;
     color: white;
     border-radius: 10px;
@@ -62,13 +61,13 @@ margin-left: 15px;
 .hrcard{
     background-color: #ebebeb;
     height: 1px;
-    width: 315px;
+    width: 360px;
     margin: 10px;
     border: none;
 }
 
 .prod-title-p{
-    font-family: 'Noto Sans Linear B', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     height: 40px;
     white-space: nowrap;
@@ -79,6 +78,12 @@ margin-left: 15px;
     color: black;
 }
 
+.prod-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .expand{
     color: #143966;
     display: flex;
@@ -86,4 +91,17 @@ margin-left: 15px;
     padding: 10px;
     font-size: 14px;
     cursor: pointer;
+}
+
+.adm{
+    color: black;
+}
+
+.admin_container{
+    color: black;
+    display: flex;
+    gap: 20px;
+    margin-right: 30px;
+    font-size: 25px;
+    z-index: 9999;
 }
