--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,10 +8,19 @@ header{
     padding-left: 20px;
     padding-right: 20px;
     position: sticky;
+    background-color: rgb(0, 0, 0,0.2);
     top: 0px;
-    background-color: black;
-    font-family: 'Noto Sans Linear B', sans-serif;
-    color: white;
+    font-family: 'Montserrat', sans-serif;
+    transition: color .3s ease-in-out,background-color .3s ease-in-out,border-color .3s ease-in-out,box-shadow .3s ease-in-out;;
+}
+
+.headerOver{
+    color: black;
+    transition: color .3s ease-in-out,background-color .3s ease-in-out,border-color .3s ease-in-out,box-shadow .3s ease-in-out;;
+}
+
+.bgblack{
+    background-color: rgb(0, 0, 0);
 }
 
 *{
