--- a/src/components/pages/Login/login.css
+++ b/src/components/pages/Login/login.css
@@ -28,7 +28,7 @@ body{
 
 .input:focus{
     outline: none;
-    box-shadow: 0px 0px 3px #143966
+    box-shadow: 0px 0px 3px black
 }
 
 .btn-login{
@@ -45,7 +45,6 @@ body{
 .login-image{
     display: flex;
     justify-content: center;
-    background-color: red;
 }
 
 #img-login{
@@ -85,4 +84,15 @@ body{
     cursor: pointer;
     color: black;
     font-size: 20px;
+}
+
+.unf{
+    color: black;
+    position: absolute;
+    left: 635px;
+    top: 310px;
+    padding: 7px;
+    border-radius: 5px;
+    background-color: red;
+    font-family: 'Noto Sans Linear B', sans-serif;
 }
