--- a/src/components/pages/Register/register.css
+++ b/src/components/pages/Register/register.css
@@ -51,7 +51,7 @@
 
 .input-register:focus{
         outline: none;
-        box-shadow: 0px 0px 4px #143966
+        box-shadow: 0px 0px 4px black
 }
 
 .btn-register{
