--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -5,14 +5,13 @@
     height: 550px;
     background-color: white;
     color: white;
-    box-shadow:
-  2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-  6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-  12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-  22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-  41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
+    transition: all .3s ease-in-out;;
+}
+
+.blur{
+    filter: blur(2px);
+    z-index: 0;
+    transition: all .3s ease-in-out;
 }
 
 .prod-image{
@@ -22,6 +21,19 @@
     align-items: center;
     padding: 10px;
     padding-top: 40px;
+    transition: all .3s ease-in-out;
+}
+
+.shadow{
+    box-shadow:
+    0px 0px 2.2px rgba(0, 0, 0, 0.025),
+    0px 0px 5.3px rgba(0, 0, 0, 0.036),
+    0px 0px 10px rgba(0, 0, 0, 0.045),
+    0px 0px 17.9px rgba(0, 0, 0, 0.054),
+    0px 0px 33.4px rgba(0, 0, 0, 0.065),
+    0px 0px 80px rgba(0, 0, 0, 0.09)
+  ;
+  transition: box-shadow .3s ease-in-out;;
 }
 
 .imgproducto{
@@ -33,10 +45,12 @@
     color: black;
     font-size: 23px;
     font-family: 'Montserrat', sans-serif;
+    transition: all .3s ease-in-out;
 }
 
 .p-price{
     font-family: 'Montserrat', sans-serif;
+    transition: all .3s ease-in-out;
 }
 
 .container-tpb{
@@ -82,6 +96,7 @@ margin-left: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: all .3s ease-in-out;
 }
 
 .expand{
@@ -103,5 +118,51 @@ margin-left: 15px;
     gap: 20px;
     margin-right: 30px;
     font-size: 25px;
-    z-index: 9999;
+
+}
+
+.icon-card{
+    cursor: pointer;
+}
+
+.form-container-delete{
+    position: relative;
+    bottom: 350px;
+    background-color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+.input-title-send{
+    display: none;
+}
+
+.p-delete{
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+.buttons-delete{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.buttons-delete-d-none{
+    display: none;
+}
+
+.button-delete{
+    width: 120px;
+    height: 40px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    border: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
 }
