--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,10 +8,10 @@ header{
     padding-left: 20px;
     padding-right: 20px;
     position: sticky;
-    background-color: rgb(0, 0, 0,0.2);
+    background-color: black;
     top: 0px;
     font-family: 'Montserrat', sans-serif;
-    transition: color .3s ease-in-out,background-color .3s ease-in-out,border-color .3s ease-in-out,box-shadow .3s ease-in-out;;
+    z-index: 999;
 }
 
 .headerOver{
