--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -74,7 +74,7 @@ margin-left: 15px;
 
 .hrcard{
     background-color: #ebebeb;
-    height: 1px;
+    height: .5px;
     width: 360px;
     margin: 10px;
     border: none;
@@ -123,6 +123,7 @@ margin-left: 15px;
 
 .icon-card{
     cursor: pointer;
+    color: black;
 }
 
 .form-container-delete{
